--- a/mode.html
+++ b/mode.html
@@ -4,33 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Strata User Mode</title>
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/login_styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/js/scripts.js"></script>
+    <script type="text/javascript" src="assets/js/loginScripts.js"></script>
 </head>
 <body>
     <nav>
         <!-- Menu Should Always be Present -->
     </nav>
     <section id="login" class="login">
-      <div class="title_form">
-        Welcome to the World Of Strata!
-      </div>
-        <form class="login_form">
-          <!-- I'm gonna add method and action later -->
-          <div class="form_input">
+        <div class="title_form">
+            Welcome to the World <br>Of Strata!
+        </div>
+        <div id="login-noti" class="noti"><span></span></div>
+        <!-- I'm gonna add method and action later -->
+        <div class="form_input">
             <input type="text" name="username" placeholder="username">
             <input type="password" name="password" placeholder="password" >
-          </div>
-          <div class="login_submit">
-            <input type="submit" name="Login" value="Login"class="login_btn">
-          </div>
-        </form>
+            <input type="password" class="disabled" name="cpassword" placeholder="confirm password" >
+        </div>
+        <div class="login_submit">
+            <button id="login-btn">Login</button>
+        </div>
         <p>
           OR
         </p>
         <div class="register">
-          <input type="submit" name="Register" value="Register" class="register_btn">
+            <button id="register-btn">Register</button>
         </div>
     </section>
 
