--- a/game.html
+++ b/game.html
@@ -20,14 +20,14 @@
                 <span class="more">More ...</span>
             </div>
         </a>
-        <a href="./community"><img src="./assets/img/community.png"><span>Community</span></a>
-        <a href="./single"><img src="./assets/img/single.png"><span>Single</span></a>
-        <a href="./create"><img src="./assets/img/create.png"><span>Create</span></a>
-        <a href="./about"><img src="./assets/img/about.png"><span>About</span></a>
+        <a href="./community" id="community-btn"><div></div><span>Community</span></a>
+        <a href="./single" id="single-btn"><div></div><span>Single</span></a>
+        <a href="./create" id="create-btn"><div></div><span>Create</span></a>
+        <a href="./about" id="about-btn"><div></div><span>About</span></a>
     </nav>
     <section id="header">
-        <img id="back" src="./assets/img/back.png" alt="Back">
-        <img id="menu" src="./assets/img/menu.png" alt="Menu">
+        <img id="back" src="./assets/img/back.png" title="Back">
+        <img id="menu" src="./assets/img/menu.png" title="Menu">
     </section>
 
     <section id="board-container">
@@ -40,9 +40,9 @@
             <div id="colours"></div>
             <div id="buttons">
                 <strong style="cursor:pointer" onclick="build(['red', 'red', 'green', 'orange'])">Click Me To Build A Sample</strong><br><br><br><!-- Remove this line before release -->
-                <img src="./assets/img/restart.png" onclick="restart()" alt="Restart">
-                <img src="./assets/img/cancel.png" onclick="undo()" alt="Undo">
-                <img src="./assets/img/share.png" onclick="share()" alt="Share">
+                <img src="./assets/img/restart.png" onclick="restart()" title="Restart">
+                <img src="./assets/img/cancel.png" onclick="undo()" title="Undo">
+                <img src="./assets/img/share.png" onclick="share()" title="Share">
             </div>
         </div>
     </section>
