Adding support for server sending info along with html. Adjustments here and there.

--- a/game.html
+++ b/game.html
@@ -41,7 +41,7 @@
                 <p>Congratulations! <br>You finished in <span>0</span> steps</p>
             </div>
         </div>
-        <div id="dialogs">
+        <div id="dialogs" class='disabled'>
             <div id="level-dialog">
                 <p>Select Level</p>
                 <div id="levels" class="board-3">
@@ -63,7 +63,7 @@
             </div>
             
         </div>
-        <div id="lower" class='disabled'>
+        <div id="lower">
             <h3>Steps: <span id="steps">0</span></h3>
             <div id="colours"></div>
             <div id="lower-mask" class="disabled"></div>
@@ -74,6 +74,7 @@
             </div>
         </div>
     </section>
+    <!--serversays-->
 
 </body>
 </html>
