Enhanced experience when upload success in create screen

--- a/create.html
+++ b/create.html
@@ -36,6 +36,12 @@
             <div id="pattern" class="disabled"></div>
         </div>
 
+        <div id="congrats" class="disabled">
+            <div>
+                <img src="./assets/img/check.png">
+                <p></p>
+            </div>
+        </div>
         <div id="dialogs">
             <div id="size-dialog">
                 <p>Select Board Size</p>
