Adding admin page
JS code tested but only roughly. Use with caution.  Also some minor
changes here and there, and an example in routes sample

--- a/pattern.html
+++ b/pattern.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Strata | Community</title>
+    <title>Strata | Pattern</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/community_styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -42,12 +42,8 @@
         <a id="try"><div></div><span>Try</span></a>
         <a id="like"><div></div><span>Like 5</span></a>
     </section>
-    <section id="comments" class="disabled">
-        
-    </section>
-    <section id="addComments" class="disabled">
-        
-    </section>
+    <section id="comments" class="disabled"></section>
+    <section id="addComments" class="disabled"></section>
     <!--serversays-->
 
 </body>
