Adding route examples and todos
Roughy tested pattern JS. I did not have a server at hand so I was just
writing and assumed it work. Use with caution. Oh and remove that
serversays div

--- a/pattern.html
+++ b/pattern.html
@@ -45,6 +45,7 @@
     <section id="comments" class="disabled"></section>
     <section id="addComments" class="disabled"></section>
     <!--serversays-->
+    <div id="serversays">{"username":"username","verbose":"verbose","pattern":{"pid":1,"name":"pattern name","author":"author","src":"patterndefault.png","time":"timeuploaded","likes":5,"liked":false}}</div>
 
 </body>
 </html>
