Added a homepage. Footers

--- a/create.html
+++ b/create.html
@@ -24,6 +24,7 @@
         <a href="./single" id="single-btn"><div></div><span>Single</span></a>
         <a href="./create" id="create-btn"><div></div><span>Create</span></a>
         <a href="./about" id="about-btn"><div></div><span>About</span></a>
+        <span class="small">CSC309 Project<br>Fall 2016<br>Team NoBeginningMiddleEnd</span>
     </nav>
     <section id="header">
         <img id="back" src="./assets/img/back.png" title="Back">
