made my own db in localhost and worked based off that, login, register and create working

--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
             </div>
         </a>
         <a href="./community" id="community-btn"><div></div><span>Community</span></a>
-        <a href="./single" id="single-btn"><div></div><span>Single</span></a>
+        <a id="single-btn"><div></div><span>Single</span></a>
         <a href="./create" id="create-btn"><div></div><span>Create</span></a>
         <a href="./about" id="about-btn"><div></div><span>About</span></a>
         <span class="small">CSC309 Project<br>Fall 2016<br>Team NoBeginningMiddleEnd</span>
