--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
   <div id="w">
     <div id="content" class="clearfix">
       <div id="userphoto"><img src="assets/img/avatar.png" alt="default avatar"></div>
-      <h1>Username</h1>
+      <h1 id="username" >Username</h1>
 
       <nav id="profiletabs">
         <ul class="clearfix">
