Large scale update on server. Fixed game screen, patched login, added logout, community and search, create handlers.

--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,7 @@
 
         <p class="setting"><span>Change Password</span> <input type="button" name="Change" value="Change"></p>
       </section>
+      <button id="logout">Log out</button>
     </div><!-- @end #content -->
   </div><!-- @end #w -->
 </body>
